objects/docebo_v3__LearningPlanCourseEnrollment__c.object
<CustomObject>
    <description>Links a learning plan enrollment to that learning plan&apos;s courses enrollments</description>
    <fields>
        <fullName>docebo_v3__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the course has been completed</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>docebo_v3__CourseEnrollmentStatus__c</fullName>
        <label>Course Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>docebo_v3__Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>docebo_v3__CourseEnrollment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course Enrollment</label>
        <referenceTo>docebo_v3__CourseEnrollment__c</referenceTo>
        <relationshipLabel>Learning Plan Course Enrollments</relationshipLabel>
        <relationshipName>LearningPlanCourseEnrollments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Effective__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the course is effectively belonging to current LMS courses selection or is part of the second-hand selection, like belonging to some Learning Plan, etc. ( flag Effective__c = true)  and is not deleted ( Deleted__c = false )</description>
        <label>Effective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>docebo_v3__LearningPlanEnrollment__c</fullName>
        <label>Learning Plan Enrollment</label>
        <referenceTo>docebo_v3__LearningPlanEnrollment__c</referenceTo>
        <relationshipLabel>Learning Plan Course Enrollments</relationshipLabel>
        <relationshipName>LearningPlanCourseEnrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>docebo_v3__UnenrollmentDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UnenrollmentDate</label>
        <type>DateTime</type>
    </fields>
    <label>Learning Plan Course Enrollment</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>docebo_v3__CourseEnrollment__c</columns>
        <columns>docebo_v3__LearningPlanEnrollment__c</columns>
        <columns>docebo_v3__Completed__c</columns>
        <columns>docebo_v3__CourseEnrollmentStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>docebo_v3__UnenrollmentDate__c</columns>
        <columns>docebo_v3__Effective__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>docebo_v3__All1</fullName>
        <columns>docebo_v3__CourseEnrollment__c</columns>
        <columns>docebo_v3__LearningPlanEnrollment__c</columns>
        <columns>docebo_v3__Completed__c</columns>
        <columns>docebo_v3__CourseEnrollmentStatus__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>docebo_v3__Effective__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Learning Plan Course Enrollment Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Plan Course Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>